--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
   <link rel="stylesheet" type="text/css" href="/out2.css" />
   <link rel="stylesheet" type="text/css" href="/font_css.css" />
   <link rel="stylesheet" type="text/css" href="/bootstrap.css" />
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 </head>
 
 <body class="stretched">
   <div id="root"></div>
-  <script src="./js/beacon.min.js"></script>
-  <script src="./js/bs-filestyle.js"></script>
-  <script src="./js/flow.js"></script>
-  <script src="./js/functions.js"></script>
-  <script src="./js/globals.js"></script>
-  <script src="./js/hire.js"></script>
-  <script src="./js/jquery.js"></script>
-  <script src="./js/jquery-async.js"></script>
-  <script src="./js/plugins.bootstrap.js"></script>
-  <script src="./js/plugins.easing.js"></script>
-  <script src="./js/plugins.isotope.js"></script>
-  <script src="./js/plugins.min.js"></script>
+  <script src="/js/beacon.min.js"></script>
+  <script src="/js/bs-filestyle.js"></script>
+  <script src="/js/flow.js"></script>
+  <script src="/js/functions.js"></script>
+  <script src="/js/globals.js"></script>
+  <script src="/js/hire.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/jquery-async.js"></script>
+  <script src="/js/plugins.bootstrap.js"></script>
+  <script src="/js/plugins.easing.js"></script>
+  <script src="/js/plugins.isotope.js"></script>
+  <script src="/js/plugins.min.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
