--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
   </head>
 
-  <body class="stretched">
+  <body class="stretched" style="height: 100%">
     <div id="root"></div>
     <script src="/js/beacon.min.js"></script>
     <script src="/js/bs-filestyle.js"></script>
